--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en" class="font-line">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
-    />
+    <link rel="icon" href="favicon.ico"/>
+    <link ref="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite + Svelte + TS</title>
+    <title>포크(Fork)</title>
+    <meta name="description" content="콕! 찍어먹는 AI 한식 여행 번역기">
+    <meta property="og:description" content="콕! 찍어먹는 AI 한식 여행 번역기">
+    <meta property="og:url" content="fork-ai.co">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="포크(Fork)">
+    <meta property="og:site_name" content="포크(Fork)">
+    <meta property="og:image" content="og_image.png">
   </head>
   <body>
     <div id="app"></div>
