--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="포크(Fork)">
     <meta property="og:site_name" content="포크(Fork)">
-    <meta property="og:image" content="og_image.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/3people/Fork/refs/heads/main/public/og_image.png">
   </head>
   <body>
     <div id="app"></div>
