--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:title" content="포크(Fork)">
     <meta property="og:site_name" content="포크(Fork)">
     <meta property="og:image" content="https://raw.githubusercontent.com/3people/Fork/refs/heads/main/public/og_image.png">
+    <meta name="theme-color" content="#FFFFFF" />
   </head>
   <body>
     <div id="app"></div>
