--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:site_name" content="포크(Fork)">
     <meta property="og:image" content="https://raw.githubusercontent.com/3people/Fork/refs/heads/main/public/og_image.png">
     <meta name="theme-color" content="#FFFFFF" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   </head>
   <body>
     <div id="app"></div>
